# fantasy-sport-api-rust

./: .gitignore  README.md  docker-compose.yml  rustsetup-notes.txt
api_server/: Cargo.toml
api_server/src/: main.rs
diesel_utils/: Cargo.toml
diesel_utils/src/: db_pool.rs  lib.rs  my_timespan_format.rs  my_timespan_format_opt.rs
fantasy_server/: Cargo.toml  Dockerfile  db.Dockerfile  docker-compose.yml
fantasy_server/migrations/2020-05-02-091917_create_tables/: up.sql
fantasy_server/src/: db.rs  drafting.rs  errors.rs  handlers.rs  main.rs  messages.rs  models.rs  publisher.rs  result_client.rs  schema.rs  subscriptions.rs  types.rs
fantasy_server/src/types/: drafts.rs  fantasy_teams.rs  leagues.rs  thisisshit.rs  users.rs  valid_players.rs
leaderboard_server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.bak  db.Dockerfile  docker-compose.yml  run.sh
leaderboard_server/migrations/2020-05-08-174556_create_tables/: up.sql
leaderboard_server/scripts/: extensions.sh  extensions.sql
leaderboard_server/src/: db.rs  handlers.rs  main.rs  messages.rs  publisher.rs  schema.rs  subscriptions.rs  types.rs
leaderboard_server/src/types/: leaderboards.rs  leaderboards2.rs
result_server/: Cargo.toml  Dockerfile  db.Dockerfile  docker-compose.yml  notex.txt
result_server/migrations/2020-04-01-151528_create_tables/: up.sql
result_server/migrations/2020-04-13-073452_create_tables/: up.sql
result_server/migrations/2020-04-13-080808_nonoverlap-timespans/: up.sql
result_server/migrations/2020-04-13-083636_upsert_timespan_func/: up.sql
result_server/scripts/: extensions.sh
result_server/src/: db.rs  db_pool.rs  handlers.rs  main.rs  messages.rs  models.rs  publisher.rs  schema.rs  subscription_handler.rs  subscriptions.rs  types.rs  utils.rs
result_server/src/types/: competitions.rs  matches.rs  players.rs  results.rs  series.rs  teams.rs
result_server/src/utils/: mod.rs  my_timespan_format.rs
ws_server/: Cargo.toml
ws_server/src/: db_pool.rs  lib.rs  publisher.rs  subscriptions.rs  utils.rs
ws_server/src/utils/: my_timespan_format_opt.rs
