[package]
name = "fantasy_server"
version = "0.1.0"
authors = ["johnnyk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync", "rt-util", "io-util"] }
#tokio-core= "0.1.17"
warp = { version = "0.2"}
dotenv = ">=0.8, <0.11"
#warp =  { git = "https://github.com/seanmonstar/warp.git" }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "numeric"] }
#diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "numeric"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = ">=0.2.0, <0.7.0", features = ["use_std", "serde", "v4"] }
uuidv07 = { version = ">=0.7.0, <0.9.0", package = "uuid"}
frunk = "0.3.1"
frunk_core = "0.3.1"
itertools = "0.9.0"
futures = "^0.3"
async-trait = "0.1.30"
rand = "0.7.3"
tokio-tungstenite = "0.10.1"


futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "0.4"
url = "2.0.0"

# string/enum macros (not really necessary)
#strum = "0.18.0"
#strum_macros = "0.18.0"

warp_ws_server = { path = "../ws_server" }
diesel_utils = { path = "../diesel_utils" }
openssl = "*"