[package]
name = "result_server"
version = "0.1.0"
authors = ["johnnyk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "0.2", features = ["macros"] }
tokio = { version = "0.2", features = ["macros", "default"] }
#warp = "0.2"
#warp = "0.2"
futures = "*"
warp =  { git = "https://github.com/seanmonstar/warp.git" }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "*", features = ["postgres", "r2d2"] }
