[package]
name = "warp_ws_server"
version = "0.1.0"
authors = ["johnnyk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2"}
#warp =  { git = "https://github.com/seanmonstar/warp.git" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "numeric"] }
uuid = { version = ">=0.2.0, <0.7.0", features = ["use_std", "serde", "v4"] }
uuidv07 = { version = ">=0.7.0, <0.9.0", package = "uuid"}
futures = "^0.3"
async-trait="0.1.30"
regex = "1"
lazy_static = "1.4.0"